--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "gsap": "^3.12.5",
+    "locomotive-scroll": "^5.0.0-beta.21",
+    "next": "15.0.3",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
-    "next": "15.0.3"
+    "remixicon": "^4.5.0",
+    "swiper": "^11.1.14"
   },
   "devDependencies": {
     "postcss": "^8",
