--- a/package.json
+++ b/package.json
@@ -9,16 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "gsap": "^3.12.5",
-    "locomotive-scroll": "^5.0.0-beta.21",
-    "next": "15.0.3",
-    "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106",
-    "remixicon": "^4.5.0",
-    "swiper": "^11.1.14"
-  },
-  "devDependencies": {
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1"
-  }
+  "@react-pdf-viewer/core": "^3.12.0",
+  "@react-pdf-viewer/page-navigation": "^3.12.0",
+  "@react-pdf-viewer/zoom": "^3.12.0",
+  "gsap": "^3.12.5",
+  "locomotive-scroll": "^5.0.0-beta.21",
+  "next": "15.0.3",
+  "pdfjs-dist": "^3.11.174",
+  "react": "^18.3.1",
+  "react-dom": "^18.3.1",
+  "react-pdf": "^7.3.3",
+  "remixicon": "^4.5.0",
+  "swiper": "^11.1.14"
+},
+"devDependencies": {
+  "postcss": "^8",
+  "tailwindcss": "^3.4.1"
+}
 }
